--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -18,12 +18,12 @@
             android:background="?attr/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
-        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        <FrameLayout
+            android:id="@+id/contentFragment"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_below="@id/toolbar"
-            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-            android:name="com.example.michaelwaterworth.testqdownloader.ListActivityFragment"
-            tools:layout="@layout/fragment_list" android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_weight="1" />
 
     </RelativeLayout>
     <android.support.design.widget.NavigationView
