--- a/app/src/main/res/menu/sections_fragment.xml
+++ b/app/src/main/res/menu/sections_fragment.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".ListActivity">
-    <item android:id="@+id/action_delete" android:title="@string/action_delete"
-        android:icon="@drawable/ic_delete_white_18pt_2x"
+    <item android:id="@+id/action_upload" android:title="@string/upload"
+        android:icon="@drawable/ic_file_cloud_upload"
         android:orderInCategory="100" app:showAsAction="always" />
 </menu>
