--- a/app/src/main/res/layout/sections_row.xml
+++ b/app/src/main/res/layout/sections_row.xml
@@ -12,7 +12,6 @@
         android:id="@+id/section_row_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
         android:textStyle="bold" />
 
     <TextView
@@ -20,19 +19,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/qs_row_title"
-        android:layout_gravity="end"
-        android:text="" />
-
-    <TextView
-        android:id="@+id/section_row_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:text="" />
+        android:layout_below="@+id/section_row_title"
+        android:layout_gravity="end" />
 
     <ImageView
         android:id="@+id/section_row_image"
