--- a/app/src/main/res/layout/fragment_section.xml
+++ b/app/src/main/res/layout/fragment_section.xml
@@ -14,5 +14,27 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
+        <!-- Section screen -->
+        <LinearLayout
+            android:id="@+id/thanks"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
+
+            <!--<it.sephiroth.android.library.imagezoom.ImageViewTouch-->
+                <!--android:id="@+id/image"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="0dp"-->
+                <!--android:layout_weight="1" />-->
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:longClickable="true"
+                android:text="@string/next" />
+        </LinearLayout>
+
     </ViewFlipper>
 </LinearLayout>
