--- a/app/src/main/res/layout/fragment_section.xml
+++ b/app/src/main/res/layout/fragment_section.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <!--<ProgressBar-->
         <!--android:id="@+id/task_progressbar"-->
@@ -14,20 +19,19 @@
         <!--android:layout_width="fill_parent"-->
         <!--android:layout_height="fill_parent">-->
 
+        <it.sephiroth.android.library.imagezoom.ImageViewTouch
+        android:id="@+id/section_image"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_weight="1" />
+
         <!-- Section screen -->
         <LinearLayout
             android:id="@+id/questions"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:orientation="vertical">
-
-            <!--<it.sephiroth.android.library.imagezoom.ImageViewTouch-->
-                <!--android:id="@+id/image"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="0dp"-->
-                <!--android:layout_weight="1" />-->
-
 
         </LinearLayout>
         <Button
@@ -38,4 +42,5 @@
             android:longClickable="true"
             android:text="@string/done" />
     <!--</ViewFlipper>-->
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
