--- a/app/src/main/res/layout/fragment_section.xml
+++ b/app/src/main/res/layout/fragment_section.xml
@@ -31,7 +31,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:minHeight="100dp">
 
         </LinearLayout>
         <Button
