--- a/app/src/main/res/layout/qs_row.xml
+++ b/app/src/main/res/layout/qs_row.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="72dp"
     android:orientation="vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
@@ -23,7 +23,10 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/qs_row_title"
         android:layout_gravity="end"
-        android:text="" />
+        android:text=""
+        android:scrollHorizontally="true"
+        android:ellipsize="end"
+        android:maxLines="1" />
 
     <TextView
         android:id="@+id/qs_row_date"
