--- a/app/src/main/res/layout/fragment_section.xml
+++ b/app/src/main/res/layout/fragment_section.xml
@@ -8,6 +8,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <it.sephiroth.android.library.imagezoom.ImageViewTouch
+            android:id="@+id/section_image"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_weight="1" />
+
     <!--<ProgressBar-->
         <!--android:id="@+id/task_progressbar"-->
         <!--android:layout_width="fill_parent"-->
@@ -19,29 +25,20 @@
         <!--android:layout_width="fill_parent"-->
         <!--android:layout_height="fill_parent">-->
 
-        <it.sephiroth.android.library.imagezoom.ImageViewTouch
-        android:id="@+id/section_image"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_weight="1" />
+        <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/section_page_switcher"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
 
-        <!-- Section screen -->
-        <LinearLayout
-            android:id="@+id/questions"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="vertical"
-            android:minHeight="100dp">
+        </ViewFlipper>
 
-        </LinearLayout>
         <Button
-            android:id="@+id/section_button_done"
+            android:id="@+id/section_button_next_done"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:longClickable="true"
-            android:text="@string/done" />
+            android:text="@string/next" />
     <!--</ViewFlipper>-->
     </LinearLayout>
 </ScrollView>
