--- a/app/src/main/res/layout/fragment_sections.xml
+++ b/app/src/main/res/layout/fragment_sections.xml
@@ -21,11 +21,10 @@
             android:weightSum="1">
 
             <TextView
-                android:id="@+id/page1_title"
+                android:id="@+id/page1_intro_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/new_landscape_title"
                 android:layout_alignParentTop="true"
                 android:textAlignment="center"
                 android:textAppearance="?android:attr/textAppearanceLarge"
@@ -35,14 +34,44 @@
                 android:layout_alignParentStart="true" />
 
             <TextView
-                android:id="@+id/page1_subtitle"
+                android:id="@+id/page1_intro_desciprion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="57dp"
                 android:gravity="center"
-                android:text="@string/new_landscape_subtitle"
+                android:layout_below="@id/page1_intro_title"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_above="@+id/button_take_photo">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/get_location"
+                    />
+
+                <com.joanzapata.iconify.widget.IconTextView
+                    android:text="@string/fa_compass_spin"
+                    android:shadowColor="#22000000"
+                    android:shadowDx="3"
+                    android:shadowDy="3"
+                    android:shadowRadius="1"
+                    android:textSize="20sp"
+                    android:textColor="#666"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+                </com.joanzapata.iconify.widget.IconTextView>
+
+            </LinearLayout>
+
+
 
             <Button
                 android:id="@+id/button_take_photo"
@@ -83,6 +112,13 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/testtext" />
 
         </LinearLayout>
     </ViewFlipper>
