Fix button placement on section pages

--- a/app/src/main/res/layout/fragment_section.xml
+++ b/app/src/main/res/layout/fragment_section.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:fillViewport="true"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -12,7 +13,7 @@
             android:id="@+id/section_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_weight="1" />
+            android:layout_weight="0" />
 
     <!--<ProgressBar-->
         <!--android:id="@+id/task_progressbar"-->
@@ -28,8 +29,8 @@
         <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/section_page_switcher"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
+            android:measureAllChildren="false"
+            android:layout_height="wrap_content">
         </ViewFlipper>
 
         <Button
