Fix ~50 coding issues found through code cleanup

--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListActivityFragment">
+    tools:context=".QuestionnairesActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -12,9 +12,7 @@
         <ListView
             android:id="@+id/uploadlist"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_height="wrap_content" />
 
     </ScrollView>
 
