--- a/app/src/main/res/layout/response_row.xml
+++ b/app/src/main/res/layout/response_row.xml
@@ -11,10 +11,7 @@
     <ImageView
         android:id="@+id/response_row_image"
         android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_alignParentEnd="false"
-        android:layout_alignParentStart="true"
-        />
+        android:layout_height="56dp" />
 
     <RelativeLayout android:layout_height="wrap_content"
         android:layout_width="wrap_content">
