--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -22,8 +22,7 @@
             android:id="@+id/contentFragment"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_below="@id/toolbar"
-            android:layout_weight="1" />
+            android:layout_below="@id/toolbar" />
 
     </RelativeLayout>
     <android.support.design.widget.NavigationView
