--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
-    tools:context=".ListActivityFragment">
+    tools:context=".QuestionnairesActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -13,9 +13,7 @@
         <ListView
             android:id="@+id/qslist"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_height="wrap_content" />
 
     </ScrollView>
 
