--- a/app/src/main/res/layout/fragment_sections.xml
+++ b/app/src/main/res/layout/fragment_sections.xml
@@ -116,9 +116,7 @@
             <ListView
                 android:id="@+id/sections_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:layout_width="wrap_content"
