--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
-    tools:context=".QuestionnairesActivity">
+    tools:context="uk.co.threeequals.landscapeconnect.QuestionnairesActivity">
 
     <ScrollView
         android:layout_width="match_parent"
