--- a/app/src/main/res/layout/fragment_sections.xml
+++ b/app/src/main/res/layout/fragment_sections.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SectionsFragment">
+    tools:context="uk.co.threeequals.landscapeconnect.SectionsFragment">
 
     <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/switcher"
