--- a/app/src/main/res/layout/fragment_sections.xml
+++ b/app/src/main/res/layout/fragment_sections.xml
@@ -99,12 +99,12 @@
             android:orientation="vertical"
             android:weightSum="1">
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:id="@+id/task_progressbar_holder"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content">
-            </LinearLayout>
+            <!--<LinearLayout-->
+                <!--android:orientation="vertical"-->
+                <!--android:id="@+id/task_progressbar_holder"-->
+                <!--android:layout_width="fill_parent"-->
+                <!--android:layout_height="wrap_content">-->
+            <!--</LinearLayout>-->
 
             <TextView
                 android:id="@+id/textView2"
