Add text to uploads empty list

--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -9,10 +9,24 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
 
-        <ListView
-            android:id="@+id/uploadlist"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+
+            <ListView
+                android:id="@+id/uploadlist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/emptyElement"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/upload_queue_empty"
+                android:visibility="gone" />
+
+        </RelativeLayout>
 
     </ScrollView>
 
