--- a/app/src/main/res/menu/questionnaire_fragment.xml
+++ b/app/src/main/res/menu/questionnaire_fragment.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:ls="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".ListActivity">
     <item android:id="@+id/action_new_response" android:title="@string/new_response"
-        android:orderInCategory="100" app:showAsAction="always" />
+        android:orderInCategory="100" ls:showAsAction="always" />
 </menu>
