--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -13,16 +13,15 @@
         <!-- Gives some padding at the bottom of the page for the FAB -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
         <ListView
             android:id="@+id/qslist"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="50dp" />
+            android:layout_height="wrap_content"
+            android:paddingBottom="70dp"
+            android:clipToPadding="false"/>
 
         </LinearLayout>
 
