--- a/app/src/main/res/layout/fragment_questionnaires.xml
+++ b/app/src/main/res/layout/fragment_questionnaires.xml
@@ -21,7 +21,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="70dp"
-            android:clipToPadding="false"/>
+            android:clipToPadding="false"
+            android:choiceMode="multipleChoiceModal"
+            android:listSelector="#DDDDDD"
+            />
 
         </LinearLayout>
 
