--- a/app/src/main/res/layout/fragment_sections.xml
+++ b/app/src/main/res/layout/fragment_sections.xml
@@ -35,7 +35,6 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:layout_alignParentTop="true"
-                        android:textAlignment="center"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:layout_alignParentRight="true"
                         android:layout_alignParentEnd="true"
@@ -59,7 +58,8 @@
                         android:layout_height="match_parent"
                         android:layout_below="@+id/page1_intro_desciprion"
                         android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="false" />
+                        android:layout_alignParentStart="false"
+                        android:contentDescription="@string/cont_desc_sections_intro"/>
 
                     <LinearLayout
                         android:id="@+id/page1_intro_location"
