--- a/app/src/main/res/layout/activity_intro_page1.xml
+++ b/app/src/main/res/layout/activity_intro_page1.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
+        android:id="@+id/intro_1_image"
         android:src="@drawable/hi_res_icon"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
@@ -18,18 +18,16 @@
         android:layout_height="wrap_content"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
         android:text="@string/intro_1_title"
-        android:id="@+id/intro_title"
-        android:layout_above="@+id/intro_subtitle"
-        android:layout_alignLeft="@+id/imageView2"
-        android:layout_alignStart="@+id/imageView2" />
+        android:id="@+id/intro_1_title"
+        android:layout_above="@+id/intro_1_subtitle" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
         android:text="@string/intro_1_subtitle"
-        android:id="@+id/intro_subtitle"
-        android:layout_alignBottom="@+id/imageView2"
+        android:id="@+id/intro_1_subtitle"
+        android:layout_alignBottom="@+id/intro_1_image"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="70dp" />
 
