--- a/app/src/main/res/layout/activity_intro_page2.xml
+++ b/app/src/main/res/layout/activity_intro_page2.xml
@@ -6,8 +6,8 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
-        android:src="@drawable/hi_res_icon"
+        android:id="@+id/intro_2_image"
+        android:src="@drawable/download"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
         android:layout_marginTop="-40dp" />
@@ -18,7 +18,7 @@
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
         android:text="@string/intro_2_title"
         android:id="@+id/intro_title"
-        android:layout_above="@+id/intro_subtitle"
+        android:layout_above="@+id/intro_2_subtitle"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -26,8 +26,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
         android:text="@string/intro_2_subtitle"
-        android:id="@+id/intro_subtitle"
-        android:layout_alignBottom="@+id/imageView2"
+        android:id="@+id/intro_2_subtitle"
+        android:layout_alignBottom="@+id/intro_2_image"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="70dp"
         android:layout_marginLeft="30dp"
