--- a/app/src/main/res/layout/activity_intro_page2.xml
+++ b/app/src/main/res/layout/activity_intro_page2.xml
@@ -8,9 +8,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/intro_2_image"
         android:src="@drawable/download"
-        android:layout_marginLeft="100dp"
-        android:layout_marginRight="100dp"
-        android:layout_marginTop="-40dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="65dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,10 +27,9 @@
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
         android:text="@string/intro_2_subtitle"
         android:id="@+id/intro_2_subtitle"
-        android:layout_alignBottom="@+id/intro_2_image"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="70dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="27dp"
         android:layout_marginRight="30dp"
         android:gravity="center_horizontal" />
 
