--- a/app/src/main/res/layout/fragment_sections_page2.xml
+++ b/app/src/main/res/layout/fragment_sections_page2.xml
@@ -31,8 +31,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/get_location"
-                    android:layout_centerHorizontal="true"/>
+                    android:text="@string/get_location"/>
 
                 <com.joanzapata.iconify.widget.IconTextView
                     android:text="@string/fa_compass_spin"
@@ -43,9 +42,7 @@
                     android:textSize="20sp"
                     android:textColor="#666"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    >
+                    android:layout_height="wrap_content">
                 </com.joanzapata.iconify.widget.IconTextView>
 
             </LinearLayout>
@@ -65,8 +62,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/got_location"
-                    android:layout_centerHorizontal="true"/>
+                    android:text="@string/got_location" />
 
                 <com.joanzapata.iconify.widget.IconTextView
                     android:text="@string/fa_check"
@@ -77,8 +73,7 @@
                     android:textSize="20sp"
                     android:textColor="#666"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true">
+                    android:layout_height="wrap_content">
                 </com.joanzapata.iconify.widget.IconTextView>
             </LinearLayout>
         </RelativeLayout>
