Fix issue of photo loading in SectionFragment on older devices
Remove ImageZoomTouch

--- a/app/src/main/res/layout/fragment_section.xml
+++ b/app/src/main/res/layout/fragment_section.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <it.sephiroth.android.library.imagezoom.ImageViewTouch
+        <ImageView
             android:id="@+id/section_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
