Show more info on the questionnaire details page

--- a/app/src/main/res/layout/activity_questionnaire.xml
+++ b/app/src/main/res/layout/activity_questionnaire.xml
@@ -82,6 +82,62 @@
             <!--</LinearLayout>-->
 
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_margin="10dp"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/uses_location"
+                    android:id="@+id/usesLocationText" />
+
+                <com.joanzapata.iconify.widget.IconTextView
+                    android:text="@string/fa_check"
+                    android:visibility="gone"
+                    android:textSize="20sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/usesLocationCheck"/>
+
+                <com.joanzapata.iconify.widget.IconTextView
+                    android:text="@string/fa_cross"
+                    android:visibility="gone"
+                    android:textSize="20sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/usesLocationCross"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_margin="10dp"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/uses_photo"
+                    android:id="@+id/usesPhotoText" />
+
+                <com.joanzapata.iconify.widget.IconTextView
+                    android:text="@string/fa_check"
+                    android:textSize="20sp"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/usesPhotoCheck"/>
+
+                <com.joanzapata.iconify.widget.IconTextView
+                    android:text="@string/fa_cross"
+                    android:textSize="20sp"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/usesPhotoCross"/>
+            </LinearLayout>
+
+            <LinearLayout
                 android:orientation="vertical"
                 android:layout_margin="10dp"
                 android:layout_width="match_parent"
