--- a/app/src/main/res/layout/activity_questionnaire.xml
+++ b/app/src/main/res/layout/activity_questionnaire.xml
@@ -146,7 +146,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/installed"
+                    android:text="@string/downloaded"
                     android:id="@+id/textView3" />
 
                 <TextView
