--- a/app/src/main/res/layout/fragment_questionnaires.xml
+++ b/app/src/main/res/layout/fragment_questionnaires.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:paddingBottom="70dp"
             android:clipToPadding="false"
+            android:paddingTop="8dp"
             android:choiceMode="multipleChoiceModal"
             />
 
@@ -56,13 +57,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/questionnaires_empty"
-        android:autoLink="all"
         android:textAlignment="center"
-        android:layout_above="@+id/fab_menu"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="19dp"
         android:visibility="gone"
-        android:layout_marginStart="19dp" />
+        android:layout_above="@+id/fab_menu"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
